# tree-sitter-weidu

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  WeiDU-baf.sublime-syntax  WeiDU.sublime-syntax  binding.gyp  example-file.tra  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  readme.md  setup.py  tree-sitter.json
bindings/c/: tree-sitter-weidu.h  tree-sitter-weidu.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_weidu/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWeiduTests/: TreeSitterWeiduTests.swift
src/: grammar.json  node-types.json  parser.c
