[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-weidu"
description = "Parser for weidu baldur's gate mod langauge"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "weidu"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "dark0dave", email = "dark0dave@mykolab.com" }]
requires-python = ">=3.9"
license.text = "GPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/dark0dave/tree-sitter-weidu"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
